--- a/WindowsService1/BAMFileSyncService.csproj
+++ b/WindowsService1/BAMFileSyncService.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{46F758B9-2E2E-498F-80AC-73CBD9D32941}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WindowsService1</RootNamespace>
-    <AssemblyName>WindowsService1</AssemblyName>
+    <RootNamespace>BAMFileSyncService</RootNamespace>
+    <AssemblyName>BAMFileSyncService</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
