--- a/WindowsService1/packages.config
+++ b/WindowsService1/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Azure.Core" version="1.36.0" targetFramework="net472" />
+  <package id="Costura.Fody" version="5.7.0" targetFramework="net472" developmentDependency="true" />
+  <package id="Fody" version="6.5.5" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Graph.Core" version="3.1.6" targetFramework="net472" />
